# diss

./: .gitignore  CLAUDE.md  README.md  start.bat  start.ps1
.claude/: settings.json  settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes_reference.py  routes_simulation.py
backend/app/core/: database.py  session.py
backend/app/data/: agent_parameters.json  border_points.json  crops.json  regions.json
backend/app/schemas/: simulation.py
backend/app/simulation/: calendar.py  crops.py  engine.py  geo.py  logistics.py  scenario.py  weather.py  world.py
backend/app/simulation/agents/: base.py  buyer.py  exporter.py  farmer.py  government.py
backend/app/simulation/market/: search_market.py
backend/tests/: test_api.py  test_conservation.py  test_engine.py  test_farmer.py  test_logistics.py  test_manipulation.py  test_model_extensions.py
docs/: article_ru.md  article_ru_final.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/data/: russia_regions.geojson
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AgentsPanel.tsx  ControlPanel.tsx  ExportsPanel.tsx  MapView.tsx  ParametersPanel.tsx  PriceCharts.tsx  ScenarioManipulationPanel.tsx  StatsPanel.tsx
